Entities ve DTOs olusturuldu, controllerlar olusturuldu, repositories olusturuldu. swaggerda account operasyonlarının hepsi test edildi.

--- a/Bankamatik.API/Bankamatik.API.csproj
+++ b/Bankamatik.API/Bankamatik.API.csproj
@@ -10,4 +10,10 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Bankamatik.Business\Bankamatik.Business.csproj" />
+    <ProjectReference Include="..\Bankamatik.Core\Bankamatik.Core.csproj" />
+    <ProjectReference Include="..\Bankamatik.DataAccess\Bankamatik.DataAccess.csproj" />
+  </ItemGroup>
+
 </Project>
