log sayfası admin için oluşturuldu. günün log kayıtları mail olarak gönderilebiliyor. logout butonu eklendi. tüm sayfalar için delete insert ve export to excel butonları eklendi.

--- a/BankamatikFormApp/BankamatikFormApp.csproj
+++ b/BankamatikFormApp/BankamatikFormApp.csproj
@@ -9,6 +9,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="ClosedXML" Version="0.105.0" />
+    <PackageReference Include="Microsoft.Office.Interop.Excel" Version="15.0.4795.1001" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Bankamatik.Business\Bankamatik.Business.csproj" />
     <ProjectReference Include="..\Bankamatik.Core\Bankamatik.Core.csproj" />
     <ProjectReference Include="..\Bankamatik.DataAccess\Bankamatik.DataAccess.csproj" />
